# Rust_Week_2026

./: .gitignore  README.md
day_1/fibonacci_sphere/: Cargo.toml  README.md
day_1/fibonacci_sphere/src/: main.rs
day_1/floats_practice/: Cargo.toml  README.md
day_1/floats_practice/src/: main.rs
day_1/hello_world/: Cargo.toml  README.md
day_1/hello_world/src/: main.rs
day_1/hex_diamond/: Cargo.toml  README.md  hex_diamond.ovito  tetrahedron.vtk  verify.py
day_1/hex_diamond/src/: main.rs
day_1/lattice_mc/: Cargo.toml  README.md  lattice_mc.py
day_1/lattice_mc/src/: main.rs
day_1/simulation_status/: Cargo.toml  README.md
day_1/simulation_status/src/: main.rs
day_1/widom_rowlinson/: Cargo.toml  README.md
day_1/widom_rowlinson/src/: main.rs
